--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Linux kernel
 ============
 
-There are several guides for kernel developers and users. These guides can
+There are a gazillion guides for kernel developers and users. These guides can
 be rendered in a number of formats, like HTML and PDF. Please read
 Documentation/admin-guide/README.rst first.
 
@@ -10,7 +10,7 @@ In order to build the documentation, use ``make htmldocs`` or
 
     https://www.kernel.org/doc/html/latest/
 
-There are various text files in the Documentation/ subdirectory,
+There are a lot text files in the Documentation/ subdirectory,
 about 95% of them using the Restructured Text markup notation.
 
 Please read the Documentation/process/changes.rst file, as it contains the
